--- a/invision-app/package.json
+++ b/invision-app/package.json
@@ -22,22 +22,23 @@
     },
     "devDependencies": {
         "@babel/core": "^7.7.5",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
         "@babel/preset-env": "^7.7.6",
         "@babel/preset-react": "^7.7.4",
+        "@fortawesome/react-fontawesome": "^0.1.11",
         "babel-loader": "^8.0.6",
-        "jest": "26.2.2",
+        "css-loader": "^4.2.0",
+        "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
+        "image-webpack-loader": "^6.0.0",
+        "jest": "26.2.2",
+        "react-error-boundary": "^2.3.1",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.2",
         "source-map-loader": "^1.0.1",
         "style-loader": "^1.2.1",
-        "css-loader": "^4.2.0",
-        "file-loader": "^6.0.0",
-        "@fortawesome/react-fontawesome": "^0.1.11",
-        "image-webpack-loader": "^6.0.0",
-        "react-error-boundary": "^2.3.1"
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     }
 }
