--- a/invision-app/package.json
+++ b/invision-app/package.json
@@ -18,13 +18,17 @@
         "@babel/preset-react": "^7.7.4",
         "babel-loader": "^8.0.6",
         "jest": "26.2.2",
-        "react-error-boundary": "^2.3.1"
+        "react-error-boundary": "^2.3.1",
+        "redux-thunk": "^2.3.0",
+        "@babel/polyfill": "^7.10.4"
     },
     "devDependencies": {
         "@babel/core": "^7.7.5",
         "@babel/plugin-proposal-class-properties": "^7.10.4",
         "@babel/preset-env": "^7.7.6",
         "@babel/preset-react": "^7.7.4",
+        "babel-preset-es2015": "^6.0.15",
+        "babel-preset-stage-0": "^6.0.15",
         "@fortawesome/react-fontawesome": "^0.1.11",
         "babel-loader": "^8.0.6",
         "css-loader": "^4.2.0",
