--- a/invision-app/package.json
+++ b/invision-app/package.json
@@ -8,19 +8,20 @@
         "build": "webpack --mode production"
     },
     "dependencies": {
-        "react": "16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "7.2.1",
-        "react-router": "5.2.0",
-        "redux": "4.0.5",
         "@babel/core": "^7.7.5",
+        "@babel/polyfill": "^7.10.4",
         "@babel/preset-env": "^7.7.6",
         "@babel/preset-react": "^7.7.4",
         "babel-loader": "^8.0.6",
+        "formik": "^2.2.0",
         "jest": "26.2.2",
+        "react": "16.13.1",
+        "react-dom": "^16.13.1",
         "react-error-boundary": "^2.3.1",
-        "redux-thunk": "^2.3.0",
-        "@babel/polyfill": "^7.10.4"
+        "react-redux": "7.2.1",
+        "react-router": "5.2.0",
+        "redux": "4.0.5",
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.7.5",
