--- a/invision-app/package.json
+++ b/invision-app/package.json
@@ -3,31 +3,36 @@
     "version": "0.1.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --verbose --coverage",
         "start": "webpack-dev-server --open --hot --mode development",
         "build": "webpack --mode production"
     },
     "dependencies": {
         "@babel/core": "^7.7.5",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/polyfill": "^7.10.4",
         "@babel/preset-env": "^7.7.6",
         "@babel/preset-react": "^7.7.4",
         "babel-loader": "^8.0.6",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "formik": "^2.2.0",
         "jest": "26.2.2",
         "react": "16.13.1",
         "react-dom": "^16.13.1",
         "react-error-boundary": "^2.3.1",
         "react-redux": "7.2.1",
-        "react-router": "^5.2.0",
+        "react-router": "5.2.0",
         "react-router-dom": "^5.2.0",
         "redux": "4.0.5",
+        "redux-mock-store": "^1.5.4",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.7.5",
-        "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/preset-env": "^7.7.6",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/preset-env": "^7.12.1",
+        "babel-preset-mobx": "^2.0.0",
         "@babel/preset-react": "^7.7.4",
         "babel-preset-es2015": "^6.0.15",
         "babel-preset-stage-0": "^6.0.15",
@@ -37,7 +42,7 @@
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
         "image-webpack-loader": "^6.0.0",
-        "jest": "26.2.2",
+        "jest": "^26.2.2",
         "react-error-boundary": "^2.3.1",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.2",
@@ -45,6 +50,16 @@
         "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "@testing-library/react": "^10.4.9",
+        "babel-jest": "^26.6.3",
+        "identity-obj-proxy": "^3.0.0",
+        "react-test-renderer": "^16.14.0"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|scss)$": "identity-obj-proxy"
+        }
     }
 }
