--- a/invision-app/.babelrc
+++ b/invision-app/.babelrc
@@ -3,6 +3,8 @@
     "plugins": [
         [
           "@babel/plugin-proposal-class-properties"
-        ]
+         
+        ],
+        [ "@babel/transform-runtime"]
     ]
  }
