--- a/invision-app/package.json
+++ b/invision-app/package.json
@@ -1,11 +1,11 @@
 {
     "name": "invision-app",
     "version": "0.1.0",
-    "main": "index.js",
+    "main": "server/index.js",
     "scripts": {
-        "test": "jest --verbose --coverage",
-        "start": "webpack-dev-server --open --hot --mode development",
-        "build": "webpack --mode production"
+        "start": "cross-env NODE_ENV=development node ./server",
+        "build": "cross-env NODE_ENV=production webpack --config ./webpack",
+        "prod": "cross-env NODE_ENV=production node ./server"
     },
     "dependencies": {
         "@babel/core": "^7.7.5",
@@ -13,11 +13,21 @@
         "@babel/polyfill": "^7.10.4",
         "@babel/preset-env": "^7.7.6",
         "@babel/preset-react": "^7.7.4",
+        "@babel/runtime": "^7.12.5",
+        "@hot-loader/react-dom": "^17.0.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "babel-polyfill": "^6.26.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^4.2.0",
+        "express": "^4.17.1",
+        "react-hot-loader": "^4.13.0",
         "formik": "^2.2.0",
+        "isomorphic-fetch": "^3.0.0",
         "jest": "26.2.2",
+        "mini-css-extract-plugin": "^0.9.0",
+        "node-sass": "^4.14.1",
         "react": "16.13.1",
         "react-dom": "^16.13.1",
         "react-error-boundary": "^2.3.1",
@@ -26,35 +36,48 @@
         "react-router-dom": "^5.2.0",
         "redux": "4.0.5",
         "redux-mock-store": "^1.5.4",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "sass-loader": "^9.0.2",
+        "style-loader": "^1.2.1",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-middleware": "^4.0.0",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-hot-middleware": "^2.25.0",
+        "webpack-hot-server-middleware": "^0.6.1",
+        "webpack-merge": "^5.1.0",
+        "webpack-node-externals": "^2.5.2",
+        "yup": "^0.29.3"
     },
     "devDependencies": {
         "@babel/core": "^7.7.5",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-transform-runtime": "^7.12.1",
         "@babel/preset-env": "^7.12.1",
-        "babel-preset-mobx": "^2.0.0",
         "@babel/preset-react": "^7.7.4",
-        "babel-preset-es2015": "^6.0.15",
-        "babel-preset-stage-0": "^6.0.15",
         "@fortawesome/react-fontawesome": "^0.1.11",
+        "@testing-library/react": "^10.4.9",
+        "babel-jest": "^26.6.3",
         "babel-loader": "^8.0.6",
+        "babel-preset-es2015": "^6.0.15",
+        "babel-preset-mobx": "^2.0.0",
+        "babel-preset-stage-0": "^6.0.15",
+        "cross-env": "^7.0.2",
         "css-loader": "^4.2.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
+        "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
         "jest": "^26.2.2",
         "react-error-boundary": "^2.3.1",
+        "react-test-renderer": "^16.14.0",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.2",
         "source-map-loader": "^1.0.1",
         "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
-        "@testing-library/react": "^10.4.9",
-        "babel-jest": "^26.6.3",
-        "identity-obj-proxy": "^3.0.0",
-        "react-test-renderer": "^16.14.0"
+        "webpack-dev-server": "^3.11.0"
     },
     "jest": {
         "moduleNameMapper": {
